--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -53,3 +53,26 @@ spec:
       port: 5432
       targetPort: 5432
   type: ClusterIP
+  ---
+# ConfigMap for PostgreSQL Initialization
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-init-sql
+data:
+  init.sql: |
+    CREATE DATABASE userdb;
+    CREATE USER app_user WITH ENCRYPTED PASSWORD 'password';
+    GRANT ALL PRIVILEGES ON DATABASE userdb TO app_user;
+    
+    CREATE DATABASE productdb;
+    CREATE USER productuser WITH ENCRYPTED PASSWORD 'password';
+    GRANT ALL PRIVILEGES ON DATABASE productdb TO productuser;
+    
+    CREATE DATABASE orderdb;
+    CREATE USER orderuser WITH ENCRYPTED PASSWORD 'password';
+    GRANT ALL PRIVILEGES ON DATABASE orderdb TO orderuser;
+    
+    CREATE DATABASE inventorydb;
+    CREATE USER inventoryuser WITH ENCRYPTED PASSWORD 'password';
+    GRANT ALL PRIVILEGES ON DATABASE inventorydb TO inventoryuser;
